# earn_cash_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  requirements.txt
app/: __main__.py  factory.py  settings.py
app/filters/: __init__.py  admin.py  chat.py  states.py
app/handlers/: __init__.py  group.py  user.py
app/handlers/extra/: errors.py
app/handlers/superuser/: admin.py
app/keyboards/: default.py  inline.py
app/middlewares/: __init__.py  auth.py  dbsession.py  i18n.py  repositories.py
app/models/: __init__.py  base.py  enums.py  manager.py
app/repositories/: __init__.py  base.py  task.py  user.py
locales/en/: alerts.ftl  buttons.ftl  messages.ftl
locales/ru/: alerts.ftl  buttons.ftl  messages.ftl
locales/uz/: alerts.ftl  buttons.ftl  messages.ftl
logger/: __init__.py
migrations/: env.py
migrations/versions/: 1070262d1e56_tasks.py  88579d75cea2_init.py
tests/: conftest.py  handler_test.py
